# Attendx

./: LICENSE  README.md
attendance_backend/: .dockerignore  .env  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  reset_password.py  run_password_reset_migration.py  template.yaml
attendance_backend/.github/workflows/: deploy.yml
attendance_backend/migrations/: 002_mobile.sql
attendance_backend/sql/: create_password_reset_tokens.sql
attendance_backend/src/: queries.py
attendance_backend/src/core/: config.py  database.py  email.py  security.py  utils.py
attendance_backend/src/models/: schemas.py
attendance_backend/src/routers/: auth.py  faculty.py  student.py
docs/: ARCHITECTURE.md  AWS_DEPLOYMENT_COMPARISON.md  DEPLOYMENT.md  FEATURES.md  FORGOT_PASSWORD_IMPLEMENTATION.md  PASSWORD_RESET_CONFIG.md  SECRET_LEAK_CLEANUP.md  production-config-guide.md
frontend/: .env.production
frontend/src/: App.jsx
frontend/src/api/: auth.js
frontend/src/components/: ClassDetails.jsx
frontend/src/components/attendance/: ManualAttendance.jsx
frontend/src/components/layout/: Header.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: Attendance.jsx  FacultyDashboard.jsx  ForgotPassword.jsx  Index.jsx  Login.jsx  NotFound.jsx  Register.jsx  ResetPassword.jsx  StudentDashboard.jsx
frontend/src/services/: api.js
mobile/: App.js  databaseChange.md  package-lock.json  package.json
mobile/app/(student)/: _layout.tsx  dashboard.tsx
mobile/app/(student)/class/: [id].tsx
