[project]
name = "attendance-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "boto3>=1.42.92",
    "fastapi>=0.135.1",
    "greenlet>=3.3.2",
    "mangum>=0.21.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "resend>=2.24.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
